deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rzvcv
  namespace: cvrzv
  labels:
    app: rzvcv
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rzvcv
  template:
    metadata:
      labels:
        app: rzvcv
    spec:
      containers:
      - name: rzvcvctn
        image: thorgate.local:5000/cv:latest
        ports:
        - containerPort: 3000
        resources:
          requests:
            memory: "128Mi"
            cpu: "250m"
          limits:
            memory: "256Mi"
            cpu: "500m"
---
apiVersion: v1
kind: Service
metadata:
  name: rzvcv
  namespace: cvrzv
spec:
  selector:
    app: rzvcv
  type: ClusterIP  # Change to ClusterIP as you're using Ingress
  ports:
  - protocol: TCP
    port: 80       # Change to standard HTTP port
    targetPort: 3000  # Keep targeting your app's port
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rzvcv-ingress-http
  namespace: cvrzv
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
  - host: razvanvalentingrigoras.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: rzvcv
            port:
              number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rzvcv-ingress-https
  namespace: cvrzv
  annotations:
    kubernetes.io/ingress.class: traefik
    cert-manager.io/cluster-issuer: "letsencrypt-prod"  # Use the issuer name from your test certificate
spec:
  tls:
  - hosts:
    - razvanvalentingrigoras.com
    secretName: razvanvalentingrigoras-tls
  rules:
  - host: razvanvalentingrigoras.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: rzvcv
            port:
              number: 80
